--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "expo": "~53.0.12",
+    "expo-constants": "~17.1.6",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.4",
-    "expo-router": "~5.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-linking": "~7.1.5",
-    "expo-constants": "~17.1.6",
     "react-native-web": "^0.20.0",
-    "react-dom": "19.0.0",
-    "@expo/vector-icons": "^14.1.0"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
