--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
     "zustand": "^5.0.5",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo-haptics": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
